Kuber binary added

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -77,8 +77,6 @@ RUN curl -L -o install.sh https://nixos.org/nix/install \
   
 FROM first_stage as second_stage
 SHELL ["bash", "-lc"]
-#RUN nix-env -iA niv -f https://github.com/nmattia/niv/tarball/master --substituters https://niv.cachix.org --trusted-public-keys niv.cachix.org-1:X32PCg2e/zAm3/uD1ScqW2z/K0LtDyNV7RdaxIuLgQM=
-#  && niv add mlabs-haskell/plutus-simple-model -r 64dd3fee4caff9472e0dcc2e14cc587452c80e77
 
 # install cardano-node binaries
 RUN wget https://update-cardano-mainnet.iohk.io/cardano-node-releases/cardano-node-1.35.5-linux.tar.gz \
@@ -88,11 +86,9 @@ RUN wget https://update-cardano-mainnet.iohk.io/cardano-node-releases/cardano-no
 RUN echo "export CARDANO_NODE_SOCKET_PATH=/ipc/node.socket" >> ~/.bashrc
 
 # install kuber
-RUN git clone https://github.com/dQuadrant/kuber \
-  && cd kuber \
-  && cabal update \
-  && cd server \
-  && cabal install
+RUN wget https://github.com/luisantonioig/kuber/releases/download/PPP4/kuber.tar.gz \
+  && tar -xf kuber.tar.gz -C /usr/bin \
+  && echo "export NETWORK=preview" >> ~/.bashrc
 
 RUN echo "export PATH=$PATH:/root/.cabal/bin" >> ~/.bashrc
 
